# app/Http/Requests/StoreStatisticsRequest.php
@@ -5,11 +5,13 @@ namespace App\Http\Requests;
 use Illuminate\Foundation\Http\FormRequest;
 
 /**
+ *
  * @OA\Schema(
- *      title="Store Project request",
- *      description="Store Project request body data",
- *      type="object",
- *      required={"link", "link_type", "customer_uuid"}
+ * required={"link","link_type", "customer_uuid"},
+ * @OA\Xml(name="StoreStatisticsRequest"),
+ * @OA\Property(property="link", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="link_type", type="string", readOnly="true", description="User role"),
+ * @OA\Property(property="customer_uuid", type="string", readOnly="true", format="email", description="User unique email address", example="user@gmail.com"),
  * )
  */
 class StoreStatisticsRequest extends FormRequest
